Fix jumpy behavior of tooltip.

--- a/qgepplugin/svgprofile/profile.css
+++ b/qgepplugin/svgprofile/profile.css
@@ -42,6 +42,7 @@ body {
   box-shadow:2px 2px 10px #636363;
   border: 1px solid #969696;
   padding: 0.5em;
+  pointer-events: none;
 
   left: -9999px; /* hide by placing outside viewport. This way we can still calculate the size. */
 }
